[package]
name = "tus_async_client_plus"
version = "0.2.1"
authors = ["Ilya Volchenkov <lzhepelmen@gmail.com>"]
edition = "2021"
license = "MIT"
description = "A Rust native async client library to interact with *tus* enabled endpoints."
keywords = ["tus", "upload", "resumable", "async"]
repository = "https://github.com/rambus-dumbledore/tus_async_client"
readme = "README.md"

[dependencies]
base64 = "0.13"
reqwest = "0.11"
tokio = { version = "1", features = ["full"] }
indicatif = "0.18"
clap = { version = "4.5.53", features = ["derive"] }
